src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__trait_associated_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Trait(
            TraitDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 7,
                        end: 15,
                        start_line: 2,
                        start_col: 7,
                    },
                },
                type_params: None,
                supertraits: [],
                where_clause: None,
                items: [
                    Type(
                        TypeDecl {
                            attrs: [],
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 27,
                                    end: 31,
                                    start_line: 3,
                                    start_col: 10,
                                },
                            },
                            type_params: None,
                            ty: None,
                            span: Span {
                                start: 22,
                                end: 32,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                    ),
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_async: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 3,
                                },
                                span: Span {
                                    start: 40,
                                    end: 44,
                                    start_line: 4,
                                    start_col: 8,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 5,
                                                },
                                                span: Span {
                                                    start: 50,
                                                    end: 54,
                                                    start_line: 4,
                                                    start_col: 18,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 50,
                                            end: 54,
                                            start_line: 4,
                                            start_col: 18,
                                        },
                                    },
                                    ty: Type {
                                        kind: Reference {
                                            lifetime: None,
                                            mutable: true,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 4,
                                                                    },
                                                                    span: Span {
                                                                        start: 50,
                                                                        end: 54,
                                                                        start_line: 4,
                                                                        start_col: 18,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 50,
                                                            end: 54,
                                                            start_line: 4,
                                                            start_col: 18,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 50,
                                                    end: 54,
                                                    start_line: 4,
                                                    start_col: 18,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 45,
                                            end: 54,
                                            start_line: 4,
                                            start_col: 13,
                                        },
                                    },
                                    span: Span {
                                        start: 45,
                                        end: 54,
                                        start_line: 4,
                                        start_col: 13,
                                    },
                                },
                            ],
                            return_type: Some(
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 6,
                                                        },
                                                        span: Span {
                                                            start: 59,
                                                            end: 65,
                                                            start_line: 4,
                                                            start_col: 27,
                                                        },
                                                    },
                                                    args: Some(
                                                        TypeArgs {
                                                            args: [
                                                                Type(
                                                                    Type {
                                                                        kind: Path(
                                                                            TypePath {
                                                                                segments: [
                                                                                    TypePathSegment {
                                                                                        name: Spanned {
                                                                                            node: SymbolU32 {
                                                                                                value: 4,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 66,
                                                                                                end: 70,
                                                                                                start_line: 4,
                                                                                                start_col: 34,
                                                                                            },
                                                                                        },
                                                                                        args: None,
                                                                                    },
                                                                                    TypePathSegment {
                                                                                        name: Spanned {
                                                                                            node: SymbolU32 {
                                                                                                value: 2,
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 72,
                                                                                                end: 76,
                                                                                                start_line: 4,
                                                                                                start_col: 40,
                                                                                            },
                                                                                        },
                                                                                        args: None,
                                                                                    },
                                                                                ],
                                                                                span: Span {
                                                                                    start: 66,
                                                                                    end: 76,
                                                                                    start_line: 4,
                                                                                    start_col: 34,
                                                                                },
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            start: 66,
                                                                            end: 76,
                                                                            start_line: 4,
                                                                            start_col: 34,
                                                                        },
                                                                    },
                                                                ),
                                                            ],
                                                            span: Span {
                                                                start: 65,
                                                                end: 77,
                                                                start_line: 4,
                                                                start_col: 33,
                                                            },
                                                        },
                                                    ),
                                                },
                                            ],
                                            span: Span {
                                                start: 59,
                                                end: 77,
                                                start_line: 4,
                                                start_col: 27,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 59,
                                        end: 77,
                                        start_line: 4,
                                        start_col: 27,
                                    },
                                },
                            ),
                            effects: None,
                            where_clause: None,
                            body: None,
                            span: Span {
                                start: 37,
                                end: 78,
                                start_line: 4,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 1,
                    end: 80,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 80,
        start_line: 2,
        start_col: 1,
    },
}
