src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__trait_declaration.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Trait(
            TraitDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 7,
                        end: 16,
                        start_line: 2,
                        start_col: 7,
                    },
                },
                type_params: None,
                supertraits: [],
                where_clause: None,
                items: [
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_async: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 26,
                                    end: 31,
                                    start_line: 3,
                                    start_col: 8,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Span {
                                                    start: 33,
                                                    end: 37,
                                                    start_line: 3,
                                                    start_col: 15,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 33,
                                            end: 37,
                                            start_line: 3,
                                            start_col: 15,
                                        },
                                    },
                                    ty: Type {
                                        kind: Reference {
                                            lifetime: None,
                                            mutable: false,
                                            inner: Type {
                                                kind: Path(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 33,
                                                                        end: 37,
                                                                        start_line: 3,
                                                                        start_col: 15,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 33,
                                                            end: 37,
                                                            start_line: 3,
                                                            start_col: 15,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 33,
                                                    end: 37,
                                                    start_line: 3,
                                                    start_col: 15,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 32,
                                            end: 37,
                                            start_line: 3,
                                            start_col: 14,
                                        },
                                    },
                                    span: Span {
                                        start: 32,
                                        end: 37,
                                        start_line: 3,
                                        start_col: 14,
                                    },
                                },
                            ],
                            return_type: None,
                            effects: None,
                            spec_clauses: [],
                            where_clause: None,
                            body: None,
                            span: Span {
                                start: 23,
                                end: 39,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 1,
                    end: 41,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 41,
        start_line: 2,
        start_col: 1,
    },
}
